@@ -7,16 +7,13 @@ import (
 	"github.com/piotrnar/gocoin/lib/btc"
 	"github.com/piotrnar/gocoin/lib/chain"
 	"github.com/piotrnar/gocoin/lib/qdb"
-	"github.com/piotrnar/gocoin/lib/others/blockdb"
 	"github.com/piotrnar/gocoin/client/common"
 	"github.com/piotrnar/gocoin/client/wallet"
-	"github.com/piotrnar/gocoin/client/usif/textui"
 	"github.com/piotrnar/gocoin/lib/others/sys"
 )
 
 
 func host_init() {
-	var e error
 	BtcRootDir := sys.BitcoinHome()
 	common.GocoinHomeDir = common.CFG.Datadir+string(os.PathSeparator)
 
@@ -37,18 +34,6 @@ func host_init() {
 	// Lock the folder
 	os.MkdirAll(common.GocoinHomeDir, 0770)
 	sys.LockDatabaseDir(common.GocoinHomeDir)
-
-	fi, e := os.Stat(common.GocoinHomeDir+"blockchain.new")
-	if e!=nil {
-		fmt.Println("You seem to be running Gocoin for the fist time on this PC")
-		fi, e = os.Stat(BtcRootDir+"blocks/blk00000.dat")
-		if e==nil && fi.Size()>1024*1024 {
-			fmt.Println("There is a database from Satoshi client on your disk...")
-			if textui.AskYesNo("Do you want to import this database into Gocoin?") {
-				import_blockchain(BtcRootDir+"blocks")
-			}
-		}
-	}
 
 	__exit := make(chan bool)
 	__done := make(chan bool)
@@ -106,74 +91,4 @@ func stat(totnsec, pernsec int64, totbytes, perbytes uint64, height uint32) {
 	}
 	fmt.Printf("%.1fMB of data processed. We are at height %d. Processing speed %.3fMB/sec, recent: %.1fKB/s %s\n",
 		totmbs, height, totmbs/(float64(totnsec)/1e9), perkbs/(float64(pernsec)/1e9), x)
-}
-
-
-func import_blockchain(dir string) {
-	trust := !textui.AskYesNo("Do you want to verify scripts while importing (will be slow)?")
-
-	BlockDatabase := blockdb.NewBlockDB(dir, common.Magic)
-	chain := chain.NewChain(common.GocoinHomeDir, common.GenesisBlock, false)
-
-	var bl *btc.Block
-	var er error
-	var dat []byte
-	var totbytes, perbytes uint64
-
-	chain.DoNotSync = true
-
-	fmt.Println("Be patient while importing Satoshi's database... ")
-	start := time.Now().UnixNano()
-	prv := start
-	for {
-		now := time.Now().UnixNano()
-		if now-prv >= 10e9 {
-			stat(now-start, now-prv, totbytes, perbytes, chain.BlockTreeEnd.Height)
-			prv = now  // show progress each 10 seconds
-			perbytes = 0
-		}
-
-		dat, er = BlockDatabase.FetchNextBlock()
-		if dat==nil || er!=nil {
-			println("END of DB file")
-			break
-		}
-
-		bl, er = btc.NewBlock(dat[:])
-		if er != nil {
-			println("Block inconsistent:", er.Error())
-			break
-		}
-
-		bl.Trusted = trust
-
-		er, _, _ = chain.CheckBlock(bl)
-
-		if er != nil {
-			if er.Error()!="Genesis" {
-				println("CheckBlock failed:", er.Error())
-				//os.Exit(1) // Such a thing should not happen, so let's better abort here.
-			}
-			continue
-		}
-
-		er = chain.AcceptBlock(bl)
-		if er != nil {
-			println("AcceptBlock failed:", er.Error())
-			//os.Exit(1) // Such a thing should not happen, so let's better abort here.
-		}
-
-		totbytes += uint64(len(bl.Raw))
-		perbytes += uint64(len(bl.Raw))
-	}
-
-	stop := time.Now().UnixNano()
-	stat(stop-start, stop-prv, totbytes, perbytes, chain.BlockTreeEnd.Height)
-
-	fmt.Println("Satoshi's database import finished in", (stop-start)/1e9, "seconds")
-
-	fmt.Println("Now saving the new database...")
-	chain.Close()
-	fmt.Println("Database saved. No more imports should be needed.")
-	fmt.Println("It is advised to close and restart the node now, to free some mem.")
 }
